gitops/stage03-model-monitoring/guidellm/deployment-guidellm-workbench.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guidellm-workbench
  namespace: private-ai-demo
  labels:
    app: guidellm-workbench
    app.kubernetes.io/name: guidellm-workbench
    app.kubernetes.io/part-of: evaluation
    app.kubernetes.io/component: benchmarking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guidellm-workbench
  template:
    metadata:
      labels:
        app: guidellm-workbench
        app.kubernetes.io/name: guidellm-workbench
        app.kubernetes.io/part-of: evaluation
        app.kubernetes.io/component: benchmarking
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: guidellm-runner
      containers:
        - name: workbench
          image: quay.io/rh-aiservices-bu/guidellm-wb:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: results
              mountPath: /opt/app-root/src/results
            - name: workbench-app
              mountPath: /app/app.py
              subPath: app.py
              readOnly: true
            - name: workbench-profiles
              mountPath: /app/profiles
              readOnly: true
      volumes:
        - name: results
          emptyDir: {}
        - name: workbench-app
          configMap:
            name: guidellm-workbench-app
            items:
              - key: app.py
                path: app.py
        - name: workbench-profiles
          configMap:
            name: guidellm-profiles
