gitops/stage03-model-monitoring/guidellm/route-guidellm-workbench.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guidellm-workbench
  namespace: private-ai-demo
  labels:
    app: guidellm-workbench
    app.kubernetes.io/name: guidellm-workbench
    app.kubernetes.io/part-of: evaluation
    app.kubernetes.io/component: benchmarking
spec:
  to:
    kind: Service
    name: guidellm-workbench
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
